fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,7 @@
   padding: 0;
 }
 
-.App{
-  width: 100vw;
-  position: fixed;
-  top: 0;
-  overflow-y: hidden;
-}
+
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -41,6 +36,7 @@ body {
 .header-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
@@ -92,8 +88,6 @@ body {
 /* Results */
 .results-container {
   min-height: 300px;
-  overflow-y: auto;
-  max-height: 50vh;
 }
 
 .results-grid {
@@ -203,9 +197,20 @@ body {
   }
 
   .title-container {
-    text-align: left;
+    text-align: center;
     flex-grow: 1;
     padding: 0 2rem;
+  }
+  .App{
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    overflow-y: hidden;
+  }
+  .results-container {
+    min-height: 300px;
+    overflow-y: auto;
+    max-height: 50vh;
   }
 }
 
@@ -229,8 +234,8 @@ body {
     position: relative;
   }
   .App{
-    overflow-y: scroll;
-    max-width: 100vw;
+    overflow-y: auto;
+    width: 100vw;
   }
   .results-container {
     min-height: 300px;
